Fixed issue with radios not showing correct values

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+#root {
+  padding: 3rem;
+}
+
 .App {
   width: 60%;
   margin: 0 auto;
